# erghi-sdks

./: .clinerules  .gitignore  DEVELOPER_RULES.md  README.md
.github/: copilot-instructions.md
.github/workflows/: deploy-docs.yml  docs.yml  publish-flutter.yml  publish-npm.yml  publish-nuget.yml  publish-pypi.yml  publish-swift.yml  release-flutter.yml  release-npm.yml  release-nuget.yml  release-pypi.yml
angular/: README.md  jest.config.js  karma.conf.js  package.json  tsconfig.json
angular/examples/: simulation.component.ts
angular/src/: public-api.ts
angular/src/lib/: erghi.config.ts
angular/src/lib/interceptors/: auth.interceptor.ts
angular/src/lib/models/: index.ts
angular/src/lib/services/: auth.service.spec.ts  auth.service.ts  chat.service.spec.ts  chat.service.ts  signalr.service.spec.ts  signalr.service.ts
docs/: docusaurus.config.ts  package-lock.json
docs/docs/: API_REFERENCE.md  BRANDING.md  USER_GUIDE.md  index.md  intro.md
docs/docs/guides/: CLIENT_CREDENTIALS_INTEGRATION.md
docs/src/components/HomepageFeatures/: index.tsx
docs/src/pages/: index.tsx
dotnet/: README.md
dotnet/AIChatSDK/: AIChatClient.cs  AIChatConfig.cs  AIChatSDK.csproj
dotnet/AIChatSDK/Auth/: M2MAuthHandler.cs
dotnet/AIChatSDK/Errors/: AIChatException.cs
dotnet/AIChatSDK/Models/: Models.cs
dotnet/AIChatSDK/Resources/: AuthResource.cs  ChatResource.cs  WorkspaceResource.cs
dotnet/Erghi.SDK/: ErghiClient.cs  ErghiConfig.cs  ErghiHmac.cs
dotnet/Erghi.SDK/Auth/: M2MAuthHandler.cs
dotnet/Erghi.SDK/Errors/: ErghiException.cs
dotnet/Erghi.SDK/Resources/: AuthResource.cs  ChatResource.cs  WorkspaceResource.cs
dotnet/examples/: ChatFlowSimulation.csproj  ErghiSimulation.csproj  Program.cs
dotnet/tests/Erghi.SDK.Tests/: Erghi.SDK.Tests.csproj  ErghiHmacTests.cs
flutter/: README.md  analysis_options.yaml  pubspec.yaml
flutter/example/: pubspec.yaml
flutter/example/lib/: main.dart
flutter/lib/: erghi_sdk.dart
flutter/lib/src/: aichat_client.dart  erghi_client.dart
flutter/lib/src/config/: aichat_config.dart  erghi_config.dart
flutter/lib/src/exceptions/: exceptions.dart
flutter/lib/src/models/: conversation.dart
flutter/lib/src/resources/: auth_resource.dart  chat_resource.dart
flutter/test/: erghi_client_test.dart  erghi_client_test.mocks.dart
javascript/: README.md  package.json
javascript/examples/: simulation.ts
javascript/src/: client.ts  errors.ts  hmac.test.ts  hmac.ts  index.ts  types.ts
javascript/src/resources/: auth.ts  chat.ts  workspace.ts
python/: README.md  pyproject.toml
python/aichat/: client.py  errors.py  types.py
python/aichat/resources/: auth.py  chat.py  workspace.py
python/erghi/: __init__.py  client.py  errors.py  hmac.py  types.py
python/erghi/resources/: __init__.py  auth.py  chat.py  workspace.py
python/examples/: simulation.py
python/tests/: test_hmac.py
react/: README.md  fix_mock.py  fix_tests.py  jest.config.js  package.json
react/examples/: SimulationApp.tsx
react/src/: context.tsx  index.tsx  useAuth.ts  useChat.ts  useWebSocket.ts
react/src/__tests__/: context.spec.tsx  useAuth.spec.ts  useChat.spec.ts  useWebSocket.spec.ts
scripts/: install-hooks.sh  pre-commit.sh
swift/: Package.swift  README.md
swift/Sources/AIChatSDK/: AIChatClient.swift
swift/Sources/AIChatSDK/Auth/: M2MRequestInterceptor.swift
swift/Sources/AIChatSDK/Config/: AIChatConfig.swift
swift/Sources/ChatFlowExample/: main.swift
swift/Sources/ErghiExample/: main.swift
swift/Sources/ErghiSDK/: ErghiClient.swift
swift/Tests/ErghiSDKTests/: ErghiSDKTests.swift
widget/: README.md  package.json  tsconfig.json  webpack.config.js
widget/examples/: index.html
widget/src/: index.spec.ts  index.ts  locale.ts  notification.ts  realtime.spec.ts  realtime.ts  styles.ts
(+9 files in other folders)
